--- a/templates/inventory/base.html
+++ b/templates/inventory/base.html
@@ -58,6 +58,9 @@
                 <a class="nav-link fw-bold text-light" href="{% url 'create_job' %}">Add job</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link fw-bold text-light" href="{% url 'add_eng' %}">Add new engineer</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link fw-bold text-light" href="{% url 'warehouse' %}">Warehouse</a>
               </li>
               <li class="nav-item">
