--- a/templates/inventory/job_create.html
+++ b/templates/inventory/job_create.html
@@ -14,7 +14,7 @@
       <div class="form-group">{{ form.as_p }}</div>
 
       <div class="form-group">
-        <button type="submit" class="btn-submit">Add part</button>
+        <button type="submit" class="btn-submit">Add job</button>
       </div>
     </form>
   </section>
