--- a/templates/inventory/inventory.html
+++ b/templates/inventory/inventory.html
@@ -4,7 +4,7 @@
 {% block body %}
   {% if messages %}
     {% for message in messages %}
-      <div class="alert alert-warning">{{ message }}</div>
+      <div class="alert alert-{{ message.tags }}">{{ message }}</div>
     {% endfor %}
   {% endif %}
 
