--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,7 +29,7 @@ h4 {
     margin-bottom: 15px;
 }
 
-/* .btn-submit {
+.btn-submit {
     background: #007bff;
     color: #fff;
     padding: 10px 20px;
@@ -38,7 +38,19 @@ h4 {
     font-size: 16px;
     cursor: pointer;
     transition: background 0.3s;
-} */
+}
+
+.errorlist {
+    color: #d8000c;
+    /* Red color for errors */
+    background: #ffd2d2;
+    /* Light red background */
+    border: 1px solid #d8000c;
+    padding: 8px 12px;
+    border-radius: 4px;
+    margin-bottom: 10px;
+    list-style: none;
+}
 
 .btn-submit:hover {
     background: #0056b3;
